welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:18: error: Boolean does not take parameters
		return (getDirection()==Direction.EAST && MurNord()==true)
                                                                 ^